# tinyplug

./: .gitignore  CMakeLists.txt  LICENSE  README.md  new_plugin.py
cmake/: app_info.h.in  helpers.cmake  plug_info.h.in  preset_list.h.in
formats/: formats.cmake
formats/aax/: make_aax_plugin.cmake
formats/aax/cmake/: aax_categories.h.in  postbuild_copy.bat
formats/aax/source/: aax_adapters.h  aax_describe.cpp  aax_gui.cpp  aax_gui.h  aax_monolith.cpp  aax_monolith.h  aax_parameters.cpp  aax_parameters.h  aax_taper_delegate.h
formats/auv2/: make_auv2_plugin.cmake
formats/auv2/cmake/: Info.plist.in  exports.txt
formats/auv2/source/: auv2_adapters.h  auv2_effect.cpp  auv2_effect.h  auv2_view.cpp  auv2_view.h
formats/auv3/: make_auv3_plugin.cmake
formats/auv3/cmake/: Entitlements-Extension.plist.in  Entitlements-iOS.plist.in  Info-App.plist.in  Info-Core.plist.in  Info-Extension.plist.in
formats/clap/: make_clap_plugin.cmake
formats/clap/source/: clap_adapters.h  clap_entry.cpp  clap_kernel.cpp  clap_plugin.cpp  clap_plugin.h  clap_preset_discovery.h  clap_view.cpp  clap_view.h
formats/vst3/: make_vst3_plugin.cmake
formats/vst3/cmake/: desktop.ini  exports.txt  postbuild_copy.bat
formats/vst3/source/: vst3_adapters.h  vst3_controller.cpp  vst3_controller.h  vst3_entry.cpp  vst3_messaging.cpp  vst3_messaging.h  vst3_processor.cpp  vst3_processor.h  vst3_view.cpp  vst3_view.h
plans/: block-table-io.md  midi-support.md  state-model.md  structural-and-naming-refactor.md
plugins/: CMakeLists.txt  README.md
plugins/automation_tester/: CMakeLists.txt  README.md
plugins/automation_tester/source/: custom_view.cpp  custom_view.h  dsp_kernel.cpp  dsp_kernel.h  param_model.h  plug_editor.cpp  plug_editor.h  plug_processor.cpp  plug_processor.h
plugins/gain_demo/: CMakeLists.txt
plugins/gain_demo/source/: custom_view.cpp  (+5 more)
plugins/latency_demo/: CMakeLists.txt  README.md
plugins/latency_demo/source/: custom_view.cpp  custom_view.h  dsp_kernel.cpp  dsp_kernel.h  param_model.h  plug_editor.cpp  plug_editor.h  plug_processor.cpp  plug_processor.h
plugins/latency_demo/source/dsp/: latency.h  stereo.h
plugins/latency_demo/source/models/: meter_model.h  param_model.h
plugins/platform_demo/: CMakeLists.txt  README.md
plugins/worker_demo/: CMakeLists.txt
plugins/worker_demo/source/: plug_editor.cpp  plug_editor.h  plug_processor.cpp  plug_processor.h  plug_worker.h
plugins/worker_demo/source/models/: meter_model.h  param_model.h
presets/: make_preset_exporter.cmake  pagetable_manifest.cpp  tfx_exporter.cpp  vstpreset_exporter.cpp
shared/: CMakeLists.txt
shared/cmake/: mac_config.h.in  win_config.h.in
shared/dsp/: delay_line.hpp  host_bypass.hpp  linear_ramper.hpp
shared/platform/: ios_context.mm  ios_view.mm  mac_context.mm  mac_view.mm  platform.h  platform_dialogs.h  platform_paths.hpp  platform_view.h  view_delegate.cpp  view_delegate.h  win_context.cpp  win_view.cpp  window_context.h
shared/platform/source/: ios_context.mm  ios_dialogs.mm  ios_paths.mm  ios_view.mm  mac_context.mm  mac_dialogs.mm  mac_paths.cpp  mac_view.mm  view_delegate.cpp  win_context.cpp  win_paths.cpp  win_view.cpp
shared/skia/: WindowContext.cpp  WindowContext.h
shared/skia/mac/: GaneshMetalWindowContext_mac.mm  MacWindowGLUtils.h  MacWindowInfo.h  MetalWindowContext.mm
shared/skia/win/: D3D12WindowContext_win.cpp
shared/tinyplug/: action_queue.cpp  action_queue.hpp  change_list.hpp  gesture_recognizers.cpp  gesture_recognizers.hpp  notification_queue.cpp  notification_queue.hpp  serial_queue.cpp  serial_queue.hpp  state_adapter.cpp  state_adapter.hpp  state_rules.hpp  task_launcher.cpp  task_launcher.hpp  task_manager.cpp  task_manager.hpp  task_queue.cpp  task_queue.hpp  tiny_edit.h  tiny_events.h  tiny_kernel.h  tiny_layout.h  tiny_meters.h  tiny_params.h  tiny_processor.h  tiny_queue.h  tiny_utils.h  tiny_view.h  tiny_worker.h  tinyplug.h  undo_history.cpp  undo_history.hpp
template/: CMakeLists.txt.in
template/source/: custom_view.h  dsp_kernel.cpp  param_model.h  plug_editor.cpp  plug_editor.h  plug_processor.cpp
tiny_aax/: CMakeLists.txt
tiny_aax/cmake/: exports.txt
tiny_aax/source/: aax_adapters.h  aax_algorithm.cpp  aax_algorithm.h  aax_describe.cpp  aax_gui.cpp  aax_gui.h  aax_monolith.cpp  aax_monolith.h  aax_parameters.cpp  aax_parameters.h  aax_taper_delegate.h
tiny_auv2/: CMakeLists.txt
tiny_auv2/cmake/: Info.plist.in  auv2_deps.cmake  build_sdk.sh
tiny_auv2/source/: auv2_adapters.h  auv2_effect.cpp  auv2_effect.h  auv2_view.cpp  auv2_view.h  auv2_view_factory.mm
tiny_clap/: CMakeLists.txt
tiny_clap/cmake/: clap_deps.cmake
tiny_clap/source/: clap_adapters.h  clap_kernel.cpp  clap_kernel.h  clap_plugin.cpp  clap_plugin.h  clap_view.cpp  clap_view.h  descriptor.h  entry.cpp  plugin.cpp  plugin.h
tiny_shared/: CMakeLists.txt  cmake_defines.h.in  plug_info.h.in  shared.h  tinyplug.h  user_plug.h
tiny_shared/cmake/: plug_info.h.in
tiny_shared/platform/: graphics_delegate.h  mac_view.h  mac_view.mm  platform.h  platform_view.h  win_view.cpp
tiny_shared/skia/: WindowContext.h
tiny_shared/skia/d3d/: D3DTestUtils.h
tiny_shared/skia/mac/: GaneshMetalWindowContext_mac.h  MetalWindowContext.h
tiny_shared/skia/win/: D3D12WindowContext_win.cpp  D3DTestUtils.cpp
tiny_shared/tinyplug/: tiny_events.h  tiny_exports.h  tiny_kernel.h  tiny_layout.h  tiny_params.h  tiny_queue.h  tiny_utils.h  tiny_view.h  tinyplug.h
tiny_shared/user/: custom_view.h  dsp_kernel.h  param_model.h
tiny_user/: CMakeLists.txt
tiny_user/cmake/: helpers.cmake  plug_info.h.in
tiny_user/source/: custom_view.cpp  custom_view.h  dsp_kernel.cpp  dsp_kernel.h  param_model.h
tiny_vst3/: CMakeLists.txt
tiny_vst3/cmake/: desktop.ini  vst3_deps.cmake
tiny_vst3/source/: adapters.h  cids.h  controller.cpp  controller.h  entry.cpp  processor.cpp  processor.h  view.h  vst3_adapters.h  vst3_controller.cpp  vst3_controller.h  vst3_entry.cpp  vst3_processor.cpp  vst3_processor.h  vst3_view.cpp  vst3_view.h
tools/: README.md  generate_pages.py
(+33 files in other folders)
